the end of the command.  Its output appears in the buffer `*Async Shell
Command*'.

*** Isearch searches in the comint/shell input history when the new variable
`comint-history-isearch' is non-nil.  New commands `comint-history-isearch-backward'
and `comint-history-isearch-backward-regexp' (bound to M-r) start Isearch
in the input history regardless of the value of `comint-history-isearch'.

+++
*** Autorevert Tail mode now works also for remote files.

*** The new commands `eshell/su' and `eshell/sudo' support Tramp.
That means, they change `default-directory' to the new users value,
and let commands run under that user permissions.  It works even when
`default-directory' is already remote.


* New Modes and Packages in Emacs 23.2

** htmlfontify.el turns a fontified Emacs buffer into an HTML page.

** FIXME CEDET

** js.el is a new major mode for JavaScript files.

** imap-hash.el is a new library to address IMAP mailboxes as hashtables.


* Incompatible Lisp Changes in Emacs 23.2

** Several obsolete functions removed.
The functions have been obsolete since Emacs 19, and are unlikely to
be in use:

  time-stamp-month-dd-yyyy, time-stamp-dd/mm/yyyy, time-stamp-mon-dd-yyyy
  time-stamp-dd-mon-yy, time-stamp-yy/mm/dd, time-stamp-yyyy/mm/dd,
  time-stamp-yyyy-mm-dd, time-stamp-yymmdd, time-stamp-hh:mm:ss,
  time-stamp-hhmm, baud-rate

---
** Support for generating Emacs 18 compatible bytecode (by setting
the variable `byte-compile-compatibility') has been removed.


* Lisp changes in Emacs 23.2

** New function `completion-in-region' to use the standard completion
facilities on a particular region of text.

** The 4th arg to all-completions (aka hide-spaces) is declared obsolete.

** read-file-name-predicate is obsolete.  It was used to pass the predicate
to read-file-name-internal because read-file-name-internal abused its `pred'
argument to pass the current directory, but this hack is not needed
any more.
